pl-30 -fix- overflow y

--- a/webapp/src/styles.css
+++ b/webapp/src/styles.css
@@ -4,10 +4,10 @@
     margin-bottom: 5rem;
   }
 
-  #dashboard--component {
+  /* #dashboard--component {
     overflow: -moz-scrollbars-vertical; 
     overflow-y: scroll;
-  }
+  } */
   /* Componente: Login form */
   #login--form {
     height: 100vh;
